[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-cli"
version = "0.3.4"
authors = [
    { name = "Marco Lardera", email = "larderamarco@hotmail.com" },
    { name = "Tadeas Fort", email = "business@tadeasfort.com" }
]
description = "Simple yet effective command line client for chatting with ChatGPT using the official API."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohappyeyeballs==2.3.5",
    "aiohttp==3.10.2",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "attrs==24.2.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "distro==1.9.0",
    "filelock==3.15.4",
    "frozenlist==1.4.1",
    "fsspec==2024.6.1",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "huggingface-hub==0.24.5",
    "idna==3.7",
    "importlib-metadata==8.2.0",
    "jinja2==3.1.4",
    "jiter==0.5.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "litellm==1.43.4",
    "loguru==0.7.2",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "openai==1.40.2",
    "packaging==24.1",
    "pathspec==0.12.1",
    "platformdirs==4.2.2",
    "prompt-toolkit==3.0.47",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pygments==2.18.0",
    "pyperclip==1.9.0",
    "pysocks==1.7.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "regex==2024.7.24",
    "requests==2.32.3",
    "rich==13.7.1",
    "rich-click==1.8.3",
    "rpds-py==0.20.0",
    "sniffio==1.3.1",
    "tiktoken==0.7.0",
    "tokenizers==0.20.0",
    "tqdm==4.66.5",
    "typing-extensions==4.12.2",
    "urllib3==2.2.2",
    "wcwidth==0.2.13",
    "xdg-base-dirs==6.0.1",
    "yarl==1.9.4",
    "zipp==3.19.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
chatgpt-cli = "chatgpt.chatgpt:main"

[project.urls]
"Homepage" = "https://github.com/marcolardera/chatgpt-cli"
"Bug Tracker" = "https://github.com/marcolardera/chatgpt-cli/issues"

[tool.setuptools.package-data]
"chatgpt" = ["config_template.yaml"]