[options.entry_points]
console_scripts =
    chatgpt-cli = chatgpt:main

[options]
package_dir =
    = src
install_requires =
    black == 23.1.0
    certifi == 2022.12.7
    charset-normalizer == 3.0.1
    click == 8.1.3
    idna == 3.4
    markdown-it-py == 2.2.0
    mdurl == 0.1.2
    mypy-extensions == 1.0.0
    packaging == 23.0
    pathspec == 0.11.0
    platformdirs == 3.1.0
    prompt-toolkit == 3.0.38
    Pygments == 2.14.0
    PyYAML >= 6.0, < 6.1
    requests == 2.28.2
    rich == 13.4.0
    tomli == 2.0.1
    typing_extensions == 4.6.2
    urllib3 == 1.26.14
    wcwidth == 0.2.6
    xdg-base-dirs ~= 6.0.0
    pyperclip == 1.8.2
    PySocks == 1.7.1
package_data =
    = config_template.yaml 

[options.packages.find]
where = src

