[metadata]
name = chatgpt-cli
version = 0.3.0
author = Marco Lardera
author_email = larderamarco@hotmail.com
description = Simple yet effective command line client for chatting with ChatGPT using the official API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcolardera/chatgpt-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chatgpt-cli = chatgpt_cli.chatgpt:main